Library override creation fails silently #102495

Closed
opened 2022-11-14 08:42:01 +01:00 by Colin Basnett · 6 comments
Member

System Information
Operating system: Windows 11
Graphics card: NVIDIA RTX 3060 Ti

Blender Version
Broken: 3.3.0, 3.5.0
Worked: Unknown

Short description of error

Attempting to create a library override of a mesh data block by shift-clicking the button in the attached screenshot fails quietly, but writes an error to the console:

image.png

template_id_liboverride_hierarchy_make: The data-block METopCoverLock_Low_Fixed could not be overridden

python line lookup failed, interpreter inactive

Exact steps for others to reproduce the error

  1. Create a file with unique mesh data and save it to a .blend file.
  2. Make a new file and link the saved mesh data into the new file.
  3. Click the default cube, navigate to the Mesh Data tab and replace the data block with the linked mesh data blcok.
  4. Shift-click the button highlighted in the screenshot.
  5. Open the console and observe the error.
**System Information** Operating system: Windows 11 Graphics card: NVIDIA RTX 3060 Ti **Blender Version** Broken: 3.3.0, 3.5.0 Worked: Unknown **Short description of error** Attempting to create a library override of a mesh data block by shift-clicking the button in the attached screenshot fails quietly, but writes an error to the console: ![image.png](https://archive.blender.org/developer/F13911276/image.png) ``` template_id_liboverride_hierarchy_make: The data-block METopCoverLock_Low_Fixed could not be overridden python line lookup failed, interpreter inactive ``` **Exact steps for others to reproduce the error** 1. Create a file with unique mesh data and save it to a .blend file. 2. Make a new file and link the saved mesh data into the new file. 3. Click the default cube, navigate to the Mesh Data tab and replace the data block with the linked mesh data blcok. 4. Shift-click the button highlighted in the screenshot. 5. Open the console and observe the error.
Author
Member

Added subscriber: @cmbasnett

Added subscriber: @cmbasnett

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the silent message only visible on the console.
I'm confirming as a bug but maybe it's just a design issue.
Final decision is for the #core team.

I can confirm the silent message only visible on the console. I'm confirming as a bug but maybe it's just a design issue. Final decision is for the #core team.

This issue was referenced by 4d1a88e374

This issue was referenced by 4d1a88e3745217b103d2dd6d2ae21e50993c67cd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-11-15 16:04:33 +01:00
Bastien Montagne added this to the Core project 2023-02-09 15:43:10 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:19:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102495
No description provided.