Fix T102495: Fix UI-invisible warning and failing liboverride creation in IDTemplate in some cases.

Replace `RNA_warning` uage by `WM_report`.

And allow creating liboverrides of linked obdata used by purely local
objects.